--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start"
   },
@@ -19,18 +19,25 @@
   },
   "homepage": "https://github.com/kivenZhou/next#readme",
   "dependencies": {
+    "express": "^4.15.4",
     "next": "^3.0.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "antd-mobile": "^1.6.5",
+    "babel-plugin-css-modules-transform": "^1.2.7",
     "babel-plugin-import": "^1.4.0",
     "es6-promise": "^4.1.1",
+    "eslint": "^4.7.1",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
     "next-redux-wrapper": "^1.3.2",
+    "node-sass": "^4.5.3",
+    "postcss": "^6.0.11",
+    "postcss-cssnext": "^3.0.2",
+    "react-lazyload": "^2.2.7",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
