--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,19 @@
     ],
     "plugins": [
         [
+            "module-resolver", {
+              "root": ["."],
+              "alias": {
+                "styles": "./styles"
+              },
+              "cwd": "babelrc"
+        }],
+        [
+            "wrap-in-js",
+            {
+              "extensions": ["css$", "scss$"]
+            }
+        ],[
             "import",
             {
                 "libraryName": "antd-mobile"
