--- a/package.json
+++ b/package.json
@@ -26,23 +26,25 @@
   },
   "devDependencies": {
     "antd-mobile": "^1.6.5",
-    "babel-plugin-css-modules-transform": "^1.2.7",
+    "autoprefixer": "^7.1.4",
     "babel-plugin-import": "^1.4.0",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-wrap-in-js": "^1.1.1",
     "es6-promise": "^4.1.1",
-    "eslint": "^4.7.1",
+    "glob": "^7.1.2",
     "isomorphic-fetch": "^2.2.1",
-    "koa": "^2.3.0",
-    "koa-router": "^7.2.1",
     "next-redux-wrapper": "^1.3.2",
     "node-sass": "^4.5.3",
-    "postcss": "^6.0.11",
-    "postcss-cssnext": "^3.0.2",
-    "react-lazyload": "^2.2.7",
+    "normalize.css": "^7.0.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-loader": "^2.0.6",
+    "raw-loader": "^0.5.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "require-hacker": "^3.0.0",
+    "sass-loader": "^6.0.6",
     "svg-sprite-loader": "^0.3.1"
   }
 }
