--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "es6-promise": "^4.1.1",
     "glob": "^7.1.2",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "next-redux-wrapper": "^1.3.2",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
