--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "homepage": "https://github.com/kivenZhou/next#readme",
   "dependencies": {
     "express": "^4.15.4",
-    "next": "^3.0.6",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "next": "^3.2.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   },
   "devDependencies": {
-    "antd-mobile": "^1.6.11",
+    "antd-mobile": "^1.7.1",
     "autoprefixer": "^7.1.4",
     "babel-plugin-import": "^1.4.0",
     "babel-plugin-module-resolver": "^2.7.1",
@@ -34,12 +34,15 @@
     "glob": "^7.1.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
+    "next": "^3.2.2",
     "next-redux-wrapper": "^1.3.2",
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
