--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
     "react": "^15.6.2",
+    "react-dev-utils": "^4.2.1",
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
